

- Added support for heightfiels with holes (DxTrimeshHeightField)
- Added support for the slf4j loggin API (TZ)
- Added Ragdoll support and ConstrainedBallJoint (Piotr)
- Added sorting of contact by penetration depth (Piotr), see issue #22
- Added TrimeshHeightfield provided by Piotr
- Fixed issue #19 (thanks to Piotr)

0.3.1
=====
- Fixed issue #17
- Fixed NPE in DemoBoxStack-'x'
- Added newArray(size) methods to DVector3 and DMatrix3


0.3.0
=====
Migration to 0.13.1

New:
-- 3 new joints: DoubleBall, DoubleHinge, Transmission
-- New demos: DoubleBall, DoubleHinge, Gyro2, RFriction, Transmission
-- Multithreading (well...)

Done:
-- main code
-- tests 
-- demos
-- Fixed bug in dMatrix3Inv() --> Calculation was incorrect
-- Fixed bug in DObject --> destroying joints might have crashed
-- Fixed bug: Calling destroy() on a space with a Heightfield cause hang. 
-- Removed GeomTransform and other deprecated stuff
-- Java 1.6 again
-- Now passes strict -Xlint:all / -Werror builds

Demos:
- DemoBoxstack has MT disabled.

TODO
-- DemoPlane2 explodes...

Missing:
-- Multithreading does not work
-- Check further:
  -- DxWorldProcessMemArena.FreeMemArena --> Commented out
  -- DxWorldProcessContext.FreeArenasList --> Commented out
  -- ThreadingUtils.java 154-156
-- check matrix.h
-- Skipped: odeou.*, odetls.*


0.2.9
=====
- Fixed possible infinite loop when calling dxQuickStepParameters.clone()
- fixed problem in low level check in Cstdio.fprintf()
- Deprecated equals() methods for DVector3, DVector6 and DQuaternion
- fixed NaN Check in Common.java
- Migration to Java 7!!!!
- Set version to 0.2.9
- Cleaned up javadoc (@remarks/note/warning to <p>REMARKS:/...) and removed @brief/@ingroup/@defgroup
- Updated license dates to 2014.
- CLeaned up plenty of compiler warnings


0.2.8
=====
- Fixed issue #9: Exception when updating large trimeshes


0.2.7
=====
- Merged 'cpp' package into 'core' package
- Issue #3: porting typo in space collider