@@ -1,5 +1,6 @@
 
 
+- Test and fix for issue #31  (NPE in ragdoll)
 - Added support for heightfiels with holes (DxTrimeshHeightField)
 - Added support for the slf4j loggin API (TZ)
 - Added Ragdoll support and ConstrainedBallJoint (Piotr)
